fix search panel overflow

--- a/src/opp.css
+++ b/src/opp.css
@@ -56,7 +56,8 @@ html, body { width:100%; height:100%; margin:0; padding:0; font-size:100%; font-
   height:100%;
   padding:20px;
   overflow-y:scroll;
-  background-color: white; }
+  background-color: white;
+}
 
 .panel .title {
   font-size: 1.25em;
@@ -293,10 +294,15 @@ hr{
    Search result panel
    ######################################## */
 
+#searchPanel{
+  overflow-y: hidden;
+}
+
 #searchPanelFlexContainer{
   display: flex;
   flex-flow: column;
   overflow-y: hidden;
+  height:100%;
 }
 
 #resultsPane{
